# ssr-deno

./: .dockerignore  .env.example  .gitignore  .gitmodules  .rubocop-rails.yml  .rubocop.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Gemfile  LICENSE.txt  README.md  Rakefile  docker-entrypoint.rb  opencode.json  package-lock.json  package.json  ssr-deno.gemspec
.github/workflows/: ci.yml  docker-publish.yml
bench/: perf-check.rb  performance.rb
config/: perf-baselines.yml
docs/: ARCHITECTURE.md  architecture.md  compatibility.md  csp-nonce.md  dev-mode.md  ractor-pool.md
ext/ssr_deno/: Cargo.toml  extconf.rb
ext/ssr_deno/crates/ssr_deno_core/: Cargo.toml
ext/ssr_deno/crates/ssr_deno_core/src/: lib.rs  source_mapper.rs  tests.rs
ext/ssr_deno/crates/ssr_deno_core/src/source_mapper/: tests.rs
ext/ssr_deno/crates/ssr_deno_dev_mode/: Cargo.toml
ext/ssr_deno/crates/ssr_deno_dev_mode/src/: dev_mode_builder.rs  dev_mode_module_loader.rs  dev_mode_npm_resolver.rs  lib.rs  require_loader.rs
ext/ssr_deno/crates/ssr_deno_dev_mode/src/dev_mode_module_loader/: tests.rs
ext/ssr_deno/crates/ssr_deno_dev_mode/src/dev_mode_npm_resolver/: tests.rs
ext/ssr_deno/crates/ssr_deno_dev_mode/src/require_loader/: tests.rs
ext/ssr_deno/crates/ssr_deno_sys/: Cargo.toml
ext/ssr_deno/crates/ssr_deno_sys/src/: lib.rs  tests.rs
ext/ssr_deno/src/: cjs_interop_repro_test.rs  deno_runtime_wrapper.rs  dev_module_loader.rs  dev_npm_resolver.rs  lib.rs  node_builtin_loader.rs  nop_types.rs  real_npm_types.rs  require_loader.rs  sys.rs
ext/ssr_deno/src/deno_runtime_wrapper/: builder.rs  call_render.rs  dev_builder.rs  dev_handle.rs  dev_load.rs  dev_worker.rs  esm_loader.rs  handle.rs  heap_stats.rs  mod.rs  pool.rs  render.rs  render_chunked.rs  render_stream.rs  render_stream_chunked.rs  render_stream_chunked_op.rs  types.rs  watchdog.rs  worker.rs
ext/ssr_deno/src/engine/: builder.rs  dev_load.rs  dev_worker.rs  mod.rs  pool.rs  render.rs  render_chunked.rs  types.rs  worker.rs
ext/ssr_deno/src/js/: ssr_stream_init.js
lib/ssr/: deno.rb
plans/: always-on-event-loop.md  architecture.md  async-render-polling-improvements.md  async-render-support.md  call-render-optimization.md  call-render-refactoring.md  call_render_refactor.md  channel-send-error.md  chunked-http-streaming.md  ci-speedup.md  clone-audit-findings.md  code-review-fixes.md  codebase-review-findings.md  configurable-render-timeout.md  csp-nonce-support.md  default-pool-size-1.md  deployment-considerations.md  dev-mode-cjs-interop-bug.md  dev-mode-deferred.md  dev-mode-followups.md  docker-poc.md  drain-serialization.md  env-var-config.md  esm-multi-chunk-support.md  event-loop-approach-c.md  extract-config-module.md  extract-dev-crate.md  gvl-release-experiment.md  html-safe-support.md  human-readable-bundle-id.md  incremental-compilation.md  js-error-message-backtrace-impl.md  js-error-message-backtrace.md  mainworker-migration.md  memory-performance-analysis.md  move-rusty-v8-to-third-party.md  multiple-isolates.md  new-samples.md  node-builtins-phase2.md  node-builtins-support.md  (+49 more)
plans/archived/: always-on-event-loop.md  architecture-v1.md  async-render-polling-improvements.md  async-render-support.md  call-render-optimization.md  call-render-refactoring.md  channel-send-error.md  chunked-http-streaming.md  ci-speedup.md  clone-audit-findings.md  codebase-review-findings.md  csp-nonce-support.md  default-pool-size-1.md  deno-runtime-wrapper-split.md  dev-mode-cjs-interop-bug.md  dev-mode-followups.md  drain-serialization.md  edge-light-resolution.md  env-var-config.md  event-loop-approach-c-phase1.md  event-loop-streaming.md  js-error-message-backtrace-impl.md  macrotasks-in-ssr.md  (+36 more)
rakelib/: cargo.rake  perf.rake  rbs.rake  samples.rake  test.rake
scripts/: performance.rb  throughput.rb
test/: bench_chunked_streaming.rb  test_helper.rb  test_helper_rails.rb
(+230 files in other folders)
