[package]
name = "ssr_deno"
version = "0.1.0-alpha.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["embed"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
deno_runtime = { version = "0.254.0", features = ["transpile", "hmr"] }
deno_semver = "=0.9.1"
node_resolver = "=0.84.0"
sys_traits = "=0.1.27"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
v8 = { path = "/home/maurizio/Sviluppo/rusty_v8" }
