[workspace]
resolver = "2"
members = [
    ".",
    "crates/ssr_deno_core",
]

[package]
name = "ssr_deno"
version = "0.1.0-alpha.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ssr_deno_core = { path = "crates/ssr_deno_core" }
magnus = { version = "0.8", features = ["embed"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
deno_runtime = { version = "0.255.0", features = ["transpile", "hmr"] }
deno_semver = "=0.9.1"
node_resolver = "=0.85.0"
sys_traits = "=0.1.27"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

# V8 and Deno's core crates rely on opt-level=3: the pre-built V8 static
# library is compiled at full optimization, and the Rust FFI/snapshot code
# behaves incorrectly at lower levels (panics, JIT failures, bad codegen).
[profile.dev.package.v8]
opt-level = 3

[profile.dev.package.deno_core]
opt-level = 3

[profile.dev.package.deno_runtime]
opt-level = 3

[patch.crates-io]
v8 = { path = "../../vendor/rusty_v8" }
