[workspace]
resolver = "2"
members = [
    ".",
    "crates/ssr_deno_core",
    "crates/ssr_deno_sys",
    "crates/ssr_deno_dev_mode",
]

[package]
name = "ssr_deno"
version = "0.1.0-alpha.8"
edition = "2021"

[features]
default = ["dev-mode"]
dev-mode = ["ssr_deno_dev_mode"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ssr_deno_core = { path = "crates/ssr_deno_core" }
ssr_deno_sys = { path = "crates/ssr_deno_sys" }
ssr_deno_dev_mode = { path = "crates/ssr_deno_dev_mode", optional = true }
magnus = { version = "0.8", features = ["embed"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
deno_runtime = { version = "0.256.0", features = ["hmr"] }
deno_core = "=0.401.0"
deno_semver = "=0.10.0"
deno_error = "=0.7.1"
node_resolver = "=0.86.0"
sys_traits = "=0.1.28"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

# V8 and Deno's core crates rely on opt-level=3: the pre-built V8 static
# library is compiled at full optimization, and the Rust FFI/snapshot code
# behaves incorrectly at lower levels (panics, JIT failures, bad codegen).
[profile.dev.package.v8]
opt-level = 3

[profile.dev.package.deno_core]
opt-level = 3

[profile.dev.package.deno_runtime]
opt-level = 3

