[package]
name = "ssr_deno_dev_mode"
version = "0.1.0-alpha.8"
edition = "2021"

[dependencies]
deno_runtime = { version = "0.259.0", features = ["hmr"] }
deno_core = "=0.404.0"
deno_error = "=0.7.1"
deno_resolver = { version = "=0.82.0", features = ["deno_ast"] }
deno_ast = { version = "=0.53.2", features = ["transpiling"] }
node_resolver = "=0.89.0"
deno_semver = "=0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
magnus = { version = "0.8", features = ["embed"] }
ssr_deno_core = { path = "../ssr_deno_core" }
ssr_deno_sys = { path = "../ssr_deno_sys" }
